cluster/apps/monitoring/uptime/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`uptime.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: ${SECRET_CERT}
