cluster/apps/monitoring/uptime/uptime-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`status.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: ${SECRET_CERT}
